# TPMSimulator

./: .travis.yml  LICENSE  README.md
src/simulator/: CMakeLists.txt  TPMCmdp.c  TPMCmds.c  TcpServer.c  TpmTcpProtocol.h
src/tpm/: CMakeLists.txt
src/tpm/command/Asymmetric/: ECC_Parameters.c  ECDH_KeyGen.c  ECDH_ZGen.c  EC_Ephemeral.c  RSA_Decrypt.c  RSA_Encrypt.c  ZGen_2Phase.c
src/tpm/command/Attestation/: Attest_spt.c  Certify.c  CertifyCreation.c  GetCommandAuditDigest.c  GetSessionAuditDigest.c  GetTime.c  Quote.c
src/tpm/command/Capability/: GetCapability.c  TestParms.c
src/tpm/command/ClockTimer/: ClockRateAdjust.c  ClockSet.c  ReadClock.c
src/tpm/command/CommandAudit/: SetCommandCodeAuditStatus.c
src/tpm/command/Context/: ContextLoad.c  ContextSave.c  Context_spt.c  EvictControl.c  FlushContext.c
src/tpm/command/DA/: DictionaryAttackLockReset.c  DictionaryAttackParameters.c
src/tpm/command/Duplication/: Duplicate.c  Import.c  Rewrap.c
src/tpm/command/EA/: PolicyAuthValue.c  PolicyAuthorize.c  PolicyCommandCode.c  PolicyCounterTimer.c  PolicyCpHash.c  PolicyDuplicationSelect.c  PolicyGetDigest.c  PolicyLocality.c  PolicyNV.c  PolicyNameHash.c  PolicyNvWritten.c  PolicyOR.c  PolicyPCR.c  PolicyPassword.c  PolicyPhysicalPresence.c  PolicySecret.c  PolicySigned.c  PolicyTicket.c  Policy_spt.c
src/tpm/command/Ecdaa/: Commit.c
src/tpm/crypt/: CryptSelfTest.c  CryptUtil.c  Ticket.c
src/tpm/include/: BaseTypes.h  Capabilities.h  CommandAttributeData.c  CommandAttributes.h  Commands.h  Global.h  Implementation.h  InternalRoutines.h  TPMB.h  TPM_Types.h  Tpm.h  TpmBuildSwitches.h  VendorString.h
src/tpm/main/: CommandDispatcher.c  ExecCommand.c  HandleProcess.c  SessionProcess.c
src/tpm/subsystem/: CommandAudit.c  DA.c  Hierarchy.c  NV.c  Object.c  PCR.c  PP.c  Session.c  Time.c
src/tpm/support/: AlgorithmCap.c  Bits.c  CommandCodeAttributes.c  DRTM.c  Entity.c  Global.c  Handle.c  Locality.c  Manufacture.c  MemoryLib.c  Power.c  PropertyCap.c  TpmFail.c  marshal.c
(+262 files in other folders)
